[*]: updating API v2
